final_project/src/K8S/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-app-service
  namespace: default
spec:
  selector:
    app: python-app
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
